--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="hbg"><img src="images/header_images.jpg" width="670" height="298" alt="" class="fl" />
                     <div class="info fl">
                         <h4>Welcome to </h4>
-                        <h4>Orphanage Hope</h4>
+                        <h4>Orphans Hope</h4>
                     </div>
                     <div class="clr"></div>
                 </div>
