Before Login Add

--- a/adoption.html
+++ b/adoption.html
@@ -16,13 +16,15 @@
             <div class="header">
 
                 <div class="menu_nav">
-                    <ul>
+                   <ul>
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="register.html">Register</a></li>
-                        <li><a href="login.html">Log In</a></li>
                         <li><a href="orphanage.html">Orphanages</a></li>
                         <li><a href="verification.html">Verification Authority</a></li>
+                        <li><a href="adoption.html">Adoption</a></li>
+                        <li><a href="donor.html">Donate Money</a></li>
+                        <li><a href="register.html">Register</a></li>
+                        <li><a href="login.html">Log In</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -44,7 +46,7 @@
                         <h2><span>Adoption Form</span> </h2>
                         <br>
 
-                        <form action="" method="post" id="adoption">
+                        <form action="adoption.php" method="post">
 
 
 
@@ -82,18 +84,7 @@
                                     </td>
                                     <td><input type="text" name="mobile"></td>
                                 </tr>
-                                <tr>
-                                    <td>
-                                        <h2> Home Number </h2>
-                                    </td>
-                                    <td><input type="text" name="home"></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2> Office Number </h2>
-                                    </td>
-                                    <td><input type="text" name="office"></td>
-                                </tr>
+                                
                                 <tr>
                                     <td>
                                         <h2> Address </h2>
@@ -135,7 +126,7 @@
 
                             </table>
 
-                            <button type="submit" form="sadoption" value="submit" class="ui-btn ui-shadow">Submit</button>
+                            <button type="submit" value="submit" class="ui-btn ui-shadow">Submit</button>
 
                         </form>
 
