--- a/orphanage.html
+++ b/orphanage.html
@@ -16,13 +16,15 @@
             <div class="header">
 
                 <div class="menu_nav">
-                    <ul>
+                   <ul>
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="register.html">Register</a></li>
-                        <li><a href="login.html">Log In</a></li>
                         <li><a href="orphanage.html">Orphanages</a></li>
                         <li><a href="verification.html">Verification Authority</a></li>
+                        <li><a href="adoption.html">Adoption</a></li>
+                        <li><a href="donor.html">Donate Money</a></li>
+                        <li><a href="register.html">Register</a></li>
+                        <li><a href="login.html">Log In</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
