--- a/parents.html
+++ b/parents.html
@@ -31,8 +31,8 @@
                 <div class="clr"></div>
                 <div class="hbg"><img src="images/header_images.jpg" width="670" height="298" alt="" class="fl" />
                     <div class="info fl">
-                        <h4>Welcome to </h4> 
-                        <h4>Orphans Hope</h4>
+                        <h4>Welcome to </h4>
+                         <h4>Orphans Hope</h4>
                     </div>
                     <div class="clr"></div>
                 </div>
@@ -43,90 +43,15 @@
 
                     <div class="article">
 
-                        <h2><span>Register</span> </h2>
+
+                        <h4 style="color:#97c950;">Welcome Eager Parents</h4>
                         <br>
+                        <h2>Will you adopt a child ?</h2>
+                        <br><br>
+                        <a href=""> <button  class="ui-btn ui-shadow">Fill up child adoption form</button></a>
 
-                        <form action="" method="post" id="signup">
-
-                            <fieldset>
-                                <legend>
-                                    <h2>Are You A ?</h2>
-                                </legend>
-                                <input type="radio" name="regtypes" value="Eager Parents">Eager Parents <br/>
-                                <input type="radio" name="regtypes" value="Orphanage">Orphanage <br/>
-                                <input type="radio" name="regtypes" value="Doner">Doner <br/>
-                            </fieldset>
-                            <br>
-
-                            <table>
-                                <tr>
-                                    <td>
-                                        <h2> First Name</h2>
-                                    </td>
-                                    <td><input type="text" name="first_name"></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2> Last Name</h2>
-                                    </td>
-                                    <td><input type="text" name="last_name"></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2> NID Number</h2>
-                                    </td>
-                                    <td><input type="text" name="nid"></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2> Mobile Number (If Available)</h2>
-                                    </td>
-                                    <td><input type="text" name="mobile"></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2> Home Number (If Available)</h2>
-                                    </td>
-                                    <td><input type="text" name="home"></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2> Office Number (If Available)</h2>
-                                    </td>
-                                    <td><input type="text" name="office"></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2> Address (If Available)</h2>
-                                    </td>
-                                    <td><input type="text" name="address"></td>
-                                </tr>
-
-                                <tr>
-                                    <td>
-                                        <h2> Email</h2>
-                                    </td>
-                                    <td><input type="textarea" name="email"></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2> Password</h2>
-                                    </td>
-                                    <td><input type="password" name="address"></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2> Confirm Password</h2>
-                                    </td>
-                                    <td><input type="password" name="address"></td>
-                                </tr>
-                            </table>
-
-                            <button type="submit" form="signup" value="Register" class="ui-btn ui-shadow">Register</button>
-
-                        </form>
-
-
+<br><br>
+                        <a href=""> <button  class="ui-btn ui-shadow">Know more about Orphanage</button></a>
                     </div>
 
                 </div>
