--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
                         <li><a href="verification.html">Verification Authority</a></li>
                         <li><a href="adoption.html">Adoption</a></li>
                         <li><a href="donor.html">Donate Money</a></li>
-                        <li><a href="register.html">Register</a></li>
-                        <li><a href="login.html">Log In</a></li>
+                        <li><a href="Admin/registration.php">Register</a></li>
+                        <li><a href="Admin/login.php">Log In</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -44,10 +44,7 @@
                     <div class="article">
                         <h2><span>About Orphanage Hope</span> </h2>
 
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. <a href="#">Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo.</a> Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. Curabitur vel urna. In tristique orci porttitor ipsum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam.</p>
-                        <br>
-                        <h2><span>Mission & Vision</span> </h2>
-                        <p>Aenean commodo elit ac ante dignissim iaculis sit amet non velit. Donec magna sapien, molestie sit amet faucibus sit amet, fringilla in urna. Aliquam erat volutpat. Fusce a dui est. Sed in volutpat elit. Nam odio tortor, pulvinar non scelerisque in, eleifend nec nunc. Sed pretium, massa sed dictum dapibus, nibh purus posuere magna, ac porta felis lectus ut neque. Nullam sagittis ante vitae velit facilisis lacinia. Cras vehicula lacinia ornare. Duis et cursus risus. Curabitur consectetur justo sit amet odio viverra vel iaculis odio gravida. Ut imperdiet metus nec erat.</p>
+                        <p>It very sad and painful to see babies die, killed or left alone. Every day around the world there is a child aiding for help. Sometimes is very difficult to understand the life's of others. How can someone give life to a child and leave them near a dumpster or by a road side. It hurts so much to see some of these cases.Many of these children seen on the road are going to be some body in the future. Without the help of people, these kids would die in hunger. There is a purpose for these orphans being on this earth and we should help them. These kids could also be adopted because they also need a life and some where to rest their heads on. The little money we give to the poor, could also be used in helping these children.Food, clothing, and shelter would be provided for these children with our help. The little we give out could also build schools and play ground for theses children. They might not know who their parents are, but they need to enjoy life. The children would grow in faith and also learn about the world. Who knows the future? These children could become doctors, president, and even more. Am blessed with the little that i have and my heart always go to those who don't have any. Let come together and help. Life is precious and we would found peace doing these good deeds.</p>
 
                     </div>
 
@@ -58,12 +55,12 @@
                         <h2 class="star"><span>Our</span> Achievments</h2>
                         <div class="clr"></div>
                         <ul class="sb_menu">
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
+                            <li> 1st in Apicta Award</li>
+                            <li> 2nd in Smart Citizen Award</li>
+                            <li> 4th in Startup Award</li>
+                            <li> 5th in Statup Expo</li>
+                            <li> Top 100 Startup in Asia</li>
+                            <li> Top 100 Startup in South Asia</li>
 
                         </ul>
                     </div>
@@ -71,12 +68,12 @@
                         <h2 class="star"><span>Top Doner</span></h2>
                         <div class="clr"></div>
                         <ul class="ex_menu">
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
+                            <li> Amit Islam</li>
+                            <li> Rajib Huq</li>
+                            <li> Islam Tanvir</li>
+                            <li> Salman Khan</li>
+                            <li> Nir Huq</li>
+                            <li> Polash Khan</li>
                         </ul>
                     </div>
                 </div>
@@ -92,12 +89,12 @@
 
                     </div>
                     <div class="col c2">
-                        <h2><span>Latest News</span></h2>
-                        <p>Lorem ipsum dolor<br /> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. <a href="#">Morbi tincidunt, orci ac convallis aliquam</a>, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam.</p>
+                        <h2><span>Mission & Vision</span></h2>
+                        <p>The mission to connect people is what makes this statement so strong. And that promise has gone beyond sweetgreen's website and walls of its food shops: The team has made strides in the communities where it's opened stores as well. Primarily, it provides education to young kids on healthy eating,</p>
                     </div>
                     <div class="col c3">
                         <h2><span>About</span></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. llorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum. <a href="#">Learn more...</a></p>
+                        <p> It is a local program in existence for more than 60 years. More than 700 newspapers have NIE programs. NIE puts newspapers in classrooms as a topical, relevant curriculum supplement. To particpate in NIE, teachers set up a classroom subscription, usually a newspaper for each student in the classroom one day a week. Teachers then use the newspapers in activities that enhance the lessons and skills they teach.</p>
                     </div>
                     <div class="clr"></div>
                 </div>
