--- a/donor.html
+++ b/donor.html
@@ -23,8 +23,8 @@
                         <li><a href="verification.html">Verification Authority</a></li>
                         <li><a href="adoption.html">Adoption</a></li>
                         <li><a href="donor.html">Donate Money</a></li>
-                        <li><a href="register.html">Register</a></li>
-                        <li><a href="login.html">Log In</a></li>
+                        <li><a href="Admin/registration.php">Register</a></li>
+                        <li><a href="Admin/login.php">Log In</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -97,18 +97,18 @@
                     </div>
 
                 </div>
-                <div class="sidebar">
+               <div class="sidebar">
 
                     <div class="gadget">
                         <h2 class="star"><span>Our</span> Achievments</h2>
                         <div class="clr"></div>
                         <ul class="sb_menu">
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
+                            <li> 1st in Apicta Award</li>
+                            <li> 2nd in Smart Citizen Award</li>
+                            <li> 4th in Startup Award</li>
+                            <li> 5th in Statup Expo</li>
+                            <li> Top 100 Startup in Asia</li>
+                            <li> Top 100 Startup in South Asia</li>
 
                         </ul>
                     </div>
@@ -116,12 +116,12 @@
                         <h2 class="star"><span>Top Doner</span></h2>
                         <div class="clr"></div>
                         <ul class="ex_menu">
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
-                            <li> Lorem ipsum dolor sit amet.</li>
+                            <li> Amit Islam</li>
+                            <li> Rajib Huq</li>
+                            <li> Islam Tanvir</li>
+                            <li> Salman Khan</li>
+                            <li> Nir Huq</li>
+                            <li> Polash Khan</li>
                         </ul>
                     </div>
                 </div>
@@ -137,12 +137,12 @@
 
                     </div>
                     <div class="col c2">
-                        <h2><span>Latest News</span></h2>
-                        <p>Lorem ipsum dolor<br /> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. <a href="#">Morbi tincidunt, orci ac convallis aliquam</a>, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam.</p>
+                        <h2><span>Mission & Vision</span></h2>
+                        <p>The mission to connect people is what makes this statement so strong. And that promise has gone beyond sweetgreen's website and walls of its food shops: The team has made strides in the communities where it's opened stores as well. Primarily, it provides education to young kids on healthy eating,</p>
                     </div>
                     <div class="col c3">
                         <h2><span>About</span></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. llorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum. <a href="#">Learn more...</a></p>
+                        <p> It is a local program in existence for more than 60 years. More than 700 newspapers have NIE programs. NIE puts newspapers in classrooms as a topical, relevant curriculum supplement. To particpate in NIE, teachers set up a classroom subscription, usually a newspaper for each student in the classroom one day a week. Teachers then use the newspapers in activities that enhance the lessons and skills they teach.</p>
                     </div>
                     <div class="clr"></div>
                 </div>
